--- a/style.css
+++ b/style.css
@@ -70,12 +70,13 @@ body {
   z-index: 1;
 
   top: 50%;
-  transform:translateY(-50%)
+  transform:translateY(-50%);
+
+  animation: slide-back 0.4s;
 }
 
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.4s forwards;
 }
 
 #switch span {
@@ -88,6 +89,8 @@ body {
   -webkit-backdrop-filter: blur(4px);
   border-radius: 9999px;
 }
+
+
 
 /* Links */
 ul {
@@ -161,5 +164,26 @@ footer {
     --bg-url: url(./assets/bg-desktop-light.jpg);
   }
 
+}
+
+/*ANIMATION*/
+
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+
+  to {
+    left: 0;
+  }
 }
 
