--- a/style.css
+++ b/style.css
@@ -90,7 +90,9 @@ body {
   border-radius: 9999px;
 }
 
-
+#switch button:hover {
+  outline: 8px solid var(--highlight-color) ;
+}
 
 /* Links */
 ul {
